crates/apollo-compiler/test_data/diagnostics/0078_merge_conflict_nested_fragments.txt
Error: operation must not select different fields to the same alias `y`
    ╭─[0078_merge_conflict_nested_fragments.graphql:28:3]
    │
 25 │   y: c
    │   ──┬─  
    │     ╰─── field `y` is selected from field `c` here
    │ 
 28 │   y: d
    │   ──┬─  
    │     ╰─── but the same field `y` is also selected from field `d` here
────╯
Error: operation must not select different fields to the same alias `x`
    ╭─[0078_merge_conflict_nested_fragments.graphql:32:3]
    │
 21 │   x: a
    │   ──┬─  
    │     ╰─── field `x` is selected from field `a` here
    │ 
 32 │   x: b
    │   ──┬─  
    │     ╰─── but the same field `x` is also selected from field `b` here
────╯

